--- a/uncompiled_scss/slick/_slick_theme.scss
+++ b/uncompiled_scss/slick/_slick_theme.scss
@@ -10,7 +10,7 @@
 $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
-$slick-dot-color: black !default;
+$slick-dot-color: white !default;
 $slick-dot-color-active: #ff0000 !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 60px !default;
