--- a/uncompiled_scss/styles/_advantages.scss
+++ b/uncompiled_scss/styles/_advantages.scss
@@ -46,7 +46,7 @@
       height: 10px;
       width: 10px;
       border-radius: 50%;
-      background: black;
+      background: white;
       left: -32px;
       top: 3px;
     }
