--- a/uncompiled_scss/styles/_footer.scss
+++ b/uncompiled_scss/styles/_footer.scss
@@ -3,7 +3,7 @@
 
   padding-bottom: 45px;
 
-  background: url("../images/eta-logo-red.svg") left 90% no-repeat;
+  background: url("../images/eta-logo-red.svg") left 95% no-repeat;
 
   .footer {
     margin-bottom: 50px;
@@ -59,5 +59,12 @@
   }
   .bg-white {
     color: #fff;
+  }
+}
+
+
+@include desktop{
+  .footer-box {
+    background: url("../images/eta-logo-red.svg") left 90% no-repeat;
   }
 }
