--- a/uncompiled_scss/styles/_form_talents.scss
+++ b/uncompiled_scss/styles/_form_talents.scss
@@ -13,7 +13,7 @@
 
   .education-description {
     color: #777777;
-    padding-right: 15%;
+    padding-right: 0;
     margin: 50px 0;
   }
 
@@ -64,8 +64,8 @@
   }
   .add-education {
     font-family: "Futura PT Book";
-    font-size: 25px;
-    line-height: 32px;
+    font-size: 12px;
+    line-height: 15px;
     color: $color-red;
     display: inline-block;
     position: relative;
@@ -163,7 +163,7 @@
 
     .contract-info {
       margin: 30px 0;
-      padding-right: 10%;
+      padding-right: 0;
     }
 
     .contract-btn {
@@ -187,7 +187,7 @@
     .description {
       font-size: 18px;
       line-height: 23px;
-      padding-right: 26%;
+      padding-right: 0;
     }
   }
 
@@ -217,4 +217,29 @@
     }
   }
 
+
+  @include desktop{
+    .contract {
+      .contract-info {
+        padding-right: 10%;
+      }
+    }
+
+    .gallery-info {
+      .description {
+        font-size: 18px;
+        line-height: 23px;
+        padding-right: 26%;
+      }
+    }
+
+    .education-description {
+      padding-right: 15%;
+    }
+    .add-education{
+      font-size: 18px;
+      line-height: 18px;
+    }
+  }
 }
+
