--- a/uncompiled_scss/styles/_forms.scss
+++ b/uncompiled_scss/styles/_forms.scss
@@ -1,6 +1,11 @@
 #wizard {
+  .title {
+    width: 100%;
+    padding: 20px;
+    border: 1px solid black;
+  }
   .prompt {
-    margin: 50px 53% 50px 0;
+    margin: 50px 0 50px 0;
     .description {
       font-size: 18px;
       line-height: 23px;
@@ -14,13 +19,13 @@
       }
     }
   }
-  .model-checkbox{
+  .model-checkbox {
     margin-left: 10px;
     margin-top: 15px;
   }
-  .model{
+  .model {
     margin-top: 20px;
-    label{
+    label {
       line-height: 50px;
     }
   }
@@ -60,23 +65,19 @@
       border-bottom: 1px solid #777777;
     }
     .photo-block {
-      flex-basis: 24%;
-      padding: 0 15px;
+      padding: 20px 0;
       &.border {
         border: 1px solid black;
         padding: 10px 40px 155px 40px;
       }
       &.text {
-        flex-basis: 35%;
         font-size: 15px;
         line-height: 19px;
-
         color: #777777;
       }
       &.image {
         flex-basis: 20%;
         max-height: 150px;
-        margin-right: 30px;
         .arrow {
           margin-bottom: -74px;
           margin-left: 50px;
@@ -110,15 +111,15 @@
   .work-input {
     display: inline-flex;
     margin-top: 30px;
-    .work-text{
+    .work-text {
       flex-basis: 34%;
       font-size: 15px;
       line-height: 19px;
       color: #777777;
     }
-    .currency{
+    .currency {
       width: 25%;
-      select{
+      select {
         height: 50px;
         padding-top: 10px;
       }
@@ -145,8 +146,81 @@
       border-left: 1px solid #777777;
     }
   }
-  .language-title{
+  .language-title {
     margin-left: 10px;
     margin-bottom: 20px;
   }
+  .add-title{
+    text-transform: lowercase;
+    display: inline-block;
+    font-size: 12px;
+    line-height: 15px;
+    color: $color-red;
+  }
+
+
+  @include desktop {
+    .title {
+      padding: 0;
+      width: auto;
+      border: none;
+    }
+    .prompt {
+      margin: 50px 53% 50px 0;
+    }
+
+    .add-title{
+      text-transform: uppercase;
+      font-size: 18px;
+      line-height: 23px;
+    }
+    .photo-section {
+      display: flex;
+      flex-wrap: wrap;
+      &.top {
+        border-bottom: 1px solid #777777;
+      }
+      .photo-block {
+        flex-basis: 24%;
+        padding: 0 15px;
+        &.border {
+          border: 1px solid black;
+          padding: 10px 40px 155px 40px;
+        }
+        &.text {
+          font-size: 15px;
+          line-height: 19px;
+          color: #777777;
+        }
+        &.image {
+          flex-basis: 20%;
+          max-height: 150px;
+          margin-right: 30px;
+          .arrow {
+            margin-bottom: -74px;
+            margin-left: 50px;
+          }
+          .big-vector {
+            border: 1px solid black;
+            padding: 40px 50px 0 50px;
+          }
+        }
+        .title-photo {
+          text-transform: uppercase;
+          font-weight: 100;
+          font-size: 14px;
+          line-height: 18px;
+        }
+        .check-mark {
+          margin-top: 20px;
+          display: block;
+          border: 2px solid black;
+          padding: 4px 2px;
+        }
+      }
+    }
+
+  }
+
 }
+
