--- a/uncompiled_scss/styles/_photo_card.scss
+++ b/uncompiled_scss/styles/_photo_card.scss
@@ -1,8 +1,41 @@
 .photo-card {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 1em;
+  grid-row-gap: 1em;
+  .photo {
+    position: relative;
+    .arrow {
+      position: absolute;
+      bottom: 80px;
+      left: 20px;
+      filter: brightness(0) invert(1);
+      &.right {
+        margin-left: 120px;
+      }
+
+    }
+    .photo-description {
+      padding-left: 20px;
+      padding-right: 20px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      .uppercase {
+        font-size: 15px;
+        line-height: 19px;
+        color: #fff;
+      }
+      .description {
+        font-size: 10px;
+        line-height: 13px;
+        color: #fff;
+        width: 100px;
+      }
+
+    }
+  }
   .photo-1 {
     grid-column: 1/3;
     grid-row: 1/3;
@@ -49,11 +82,11 @@
     grid-row: 4/5;
   }
   .photo-11 {
-    grid-column: 1/4;
+    grid-column: 1/6;
     grid-row: 5/6;
   }
   .photo-12 {
-    grid-column: 4/7;
+    grid-column: 6/10;
     grid-row: 5/6;
   }
 
@@ -87,4 +120,104 @@
     grid-row: 8/9;
   }
 
+}
+
+@include desktop {
+  .photo-card {
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    .photo {
+      .photo-description {
+        .description {
+          font-size: 12px;
+          line-height: 15px;
+        }
+      }
+    }
+    .photo-1 {
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
+
+    .photo-2 {
+      grid-column: 3/5;
+      grid-row: 1/2;
+    }
+
+    .photo-3 {
+      grid-column: 5/7;
+      grid-row: 1/2;
+    }
+
+    .photo-4 {
+      grid-column: 3/5;
+      grid-row: 2/3;
+    }
+
+    .photo-5 {
+      grid-column: 5/7;
+      grid-row: 2/3;
+    }
+
+    .photo-6 {
+      grid-column: 1/3;
+      grid-row: 3/6;
+    }
+    .photo-7 {
+      grid-column: 3/5;
+      grid-row: 3/4;
+    }
+    .photo-8 {
+      grid-column: 5/7;
+      grid-row: 3/4;
+    }
+    .photo-9 {
+      grid-column: 3/5;
+      grid-row: 4/5;
+    }
+    .photo-10 {
+      grid-column: 5/7;
+      grid-row: 4/5;
+    }
+    .photo-11 {
+      grid-column: 1/4;
+      grid-row: 5/6;
+    }
+    .photo-12 {
+      grid-column: 4/7;
+      grid-row: 5/6;
+    }
+
+    .photo-13 {
+      grid-column: 1/3;
+      grid-row: 6/7;
+    }
+
+    .photo-14 {
+      grid-column: 3/5;
+      grid-row: 6/7;
+    }
+
+    .photo-15 {
+      grid-column: 5/7;
+      grid-row: 6/7;
+    }
+
+    .photo-16 {
+      grid-column: 1/7;
+      grid-row: 7/8;
+    }
+
+    .photo-17 {
+      grid-column: 1/4;
+      grid-row: 8/9;
+    }
+
+    .photo-18 {
+      grid-column: 4/7;
+      grid-row: 8/9;
+    }
+  }
 }
