--- a/uncompiled_scss/styles/_wizard.scss
+++ b/uncompiled_scss/styles/_wizard.scss
@@ -1,6 +1,6 @@
 
-#wizard{
-  .form{
+#wizard {
+  .form {
     margin: 50px 0;
   }
 
@@ -8,7 +8,9 @@
     display: none;
   }
   .steps {
-    float: right;
+    display: none;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #000000;
     li {
       margin-bottom: 16px;
       display: flex;
@@ -27,5 +29,12 @@
 
   .content h4 {
     display: none;
+  }
+
+  @include desktop {
+    .steps {
+      display: block;
+      float: right;
+    }
   }
 }
