--- a/uncompiled_scss/styles/_costs.scss
+++ b/uncompiled_scss/styles/_costs.scss
@@ -3,7 +3,7 @@
   margin-bottom: 40px;
 
   .costs-subheader {
-    padding-right: 40%;
+    padding-right: 0;
     padding-left: 60px;
     padding-top: 50px;
     padding-bottom: 40px;
@@ -28,4 +28,22 @@
 .w100 {
   width: 100%;
   padding: 0 !important;
+}
+
+@include desktop {
+  .costs-box {
+    position: relative;
+    margin-bottom: 40px;
+
+    .costs-subheader {
+      padding-right: 40%;
+      padding-left: 60px;
+      padding-top: 50px;
+      padding-bottom: 40px;
+
+      .text {
+        font-size: 20px;
+      }
+    }
+  }
 }
