--- a/uncompiled_scss/styles/_grid.scss
+++ b/uncompiled_scss/styles/_grid.scss
@@ -28,6 +28,17 @@
   order: 1;
 }
 
+
+@include desktop {
+  .d-order-0 {
+    order: 0;
+  }
+
+  .d-order-1 {
+    order: 1;
+  }
+}
+
 @include tablet {
   .t-order-0 {
     order: 0;
