--- a/uncompiled_scss/styles/_header.scss
+++ b/uncompiled_scss/styles/_header.scss
@@ -55,6 +55,12 @@
             height: 50px;
           }
 
+          .profile-ico{
+            background: url("../images/star.svg") center no-repeat, red;
+            display: block;
+            height: 50px;
+          }
+
           .current-language {
             background: white;
             height: 50px;
