--- a/uncompiled_scss/styles/_slider.scss
+++ b/uncompiled_scss/styles/_slider.scss
@@ -19,6 +19,7 @@
       .right-side {
 
         .film-box {
+          height: 700px;
           width: 100%;
           position: relative;
           filter: grayscale(100%);
