--- a/uncompiled_scss/styles/_about_us.scss
+++ b/uncompiled_scss/styles/_about_us.scss
@@ -1,4 +1,5 @@
 .about-us-box {
+  display: none;
   margin-top: -100px;
   padding-top: 50px;
   margin-bottom: 50px;
@@ -70,4 +71,10 @@
   padding-top: 60px;
   padding-bottom: 40px;
   margin-right: -80px;
+}
+
+@include desktop{
+  .about-us-box{
+    display: block;
+  }
 }
