--- a/uncompiled_scss/styles/_auditory.scss
+++ b/uncompiled_scss/styles/_auditory.scss
@@ -14,7 +14,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    .cart-info {
+      position: relative;
+    }
     .cart-image {
       text-align: left;
       height: 180px;
