--- a/uncompiled_scss/styles/_community.scss
+++ b/uncompiled_scss/styles/_community.scss
@@ -10,8 +10,12 @@
 }
 
 .our-community-buttons {
+  margin-top: 80px;
+  text-align: center;
   .button {
+    width: 100%;
     margin-right: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -20,19 +24,60 @@
   padding-left: 8%;
   padding-top: 30px;
   padding-bottom: 30px;
-  .text{
+  .text {
     line-height: 1.2;
   }
 }
 
 .animation-box {
-  margin-left: 20%;
-  margin-top: -40px;
+  margin-left: -25px;
+  margin-right: -25px;
+  margin-top: -370px;
   margin-bottom: -50px;
 
   .inimation-img {
     display: block;
     width: 100%;
     height: auto;
+    &.will-be-desc {
+      display: none;
+    }
+    &.will-be-sm {
+      display: block;
+    }
+  }
+}
+
+@include tablet {
+  .animation-box {
+    margin-right: auto;
+    margin-left: 20%;
+    margin-top: -370px;
+    margin-bottom: -50px;
+
+    .inimation-img {
+      display: block;
+      width: 100%;
+      height: auto;
+      &.will-be-desc {
+        display: block;
+      }
+      &.will-be-sm {
+        display: none;
+      }
+    }
+  }
+}
+
+@include desktop {
+
+  .our-community-buttons {
+    text-align: left;
+    margin-top: 0;
+    .button {
+      display: inline-block;
+      width: 320px;
+      margin-right: 20px;
+    }
   }
 }
