--- a/uncompiled_scss/styles/_footer.scss
+++ b/uncompiled_scss/styles/_footer.scss
@@ -16,6 +16,8 @@
       padding-left: 15%;
 
       p {
+        font-size: 15px;
+        line-height: 18px;
         margin-top: 0;
       }
     }
@@ -35,6 +37,8 @@
       padding-bottom: 3px;
       margin-bottom: 5px;
       color: $color-black;
+      font-size: 15px;
+      line-height: 18px;
     }
     .bg-white {
       color: #fff;
@@ -56,6 +60,8 @@
     padding-top: 3px;
     padding-bottom: 3px;
     margin-bottom: 5px;
+    font-size: 15px;
+    line-height: 18px;
   }
   .bg-white {
     color: #fff;
@@ -66,5 +72,25 @@
 @include desktop{
   .footer-box {
     background: url("../images/eta-logo-red.svg") left 90% no-repeat;
+  }
+
+  .contacts {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    .contact {
+      color: $color-black;
+      text-decoration: none;
+      display: block;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      margin-bottom: 5px;
+    }
+    .bg-white {
+      color: #fff;
+    }
   }
 }
