--- a/uncompiled_scss/styles/_inputs.scss
+++ b/uncompiled_scss/styles/_inputs.scss
@@ -25,7 +25,7 @@
 
 
 .input-checkbox {
-  margin: 30px 0 50px 26%;
+  margin: 30px 0 50px 0;
   label {
     padding-right: 100px;
   }
@@ -46,7 +46,9 @@ input[type="checkbox"]:not(:checked) + label {
   padding-left: 40px;
   margin: 10px 0 5px 0;
   cursor: pointer;
+  font-size: 12px;
   line-height: 40px;
+
   display: inline-block;
   color: $color-black;
   &.bg-white {
@@ -67,7 +69,6 @@ input[type="checkbox"]:not(:checked) + label:before {
   height: 25px;
   border: 1px solid $color-black;
   background: #fff;
-
 }
 
 input[type="checkbox"]:checked + label:after,
@@ -85,6 +86,8 @@ input[type="checkbox"]:not(:checked) + label:after {
     background: red;
   }
 }
+
+
 
 input[type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
@@ -171,6 +174,21 @@ input[type="radio"]:checked + label:after {
       color: white;
     }
   }
+
+  .input-checkbox {
+    margin: 30px 0 50px 26%;
+    label {
+      padding-right: 100px;
+    }
+  }
+
+  input[type="checkbox"]:checked + label,
+  input[type="checkbox"]:not(:checked) + label {
+    font-size: 18px;
+    line-height: 40px;
+  }
+
+
   .input-blocks{
     .label{
       line-height: 0;
