--- a/uncompiled_scss/styles/_partners.scss
+++ b/uncompiled_scss/styles/_partners.scss
@@ -9,8 +9,9 @@
   .partner {
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     margin-bottom: 80px;
 
     img {
