--- a/uncompiled_scss/styles/_costs.scss
+++ b/uncompiled_scss/styles/_costs.scss
@@ -9,7 +9,9 @@
     padding-bottom: 40px;
 
     .text {
-      font-size: 20px;
+      letter-spacing: 1px;
+      line-height: 15px;
+      font-size: 15px;
     }
   }
 
@@ -20,7 +22,9 @@
     padding-bottom: 40px;
 
     .text {
-      font-size: 20px;
+      letter-spacing: 1px;
+      line-height: 15px;
+      font-size: 15px;
     }
   }
 }
