--- a/uncompiled_scss/styles/_photo_card.scss
+++ b/uncompiled_scss/styles/_photo_card.scss
@@ -1,11 +1,17 @@
 .photo-card {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   grid-column-gap: 1em;
   grid-row-gap: 1em;
   .photo {
     position: relative;
+    .display-sm-none{
+      display: none;
+    }
+    .display-desc-none{
+      display: block;
+    }
     .arrow {
       position: absolute;
       bottom: 80px;
@@ -37,87 +43,87 @@
     }
   }
   .photo-1 {
-    grid-column: 1/3;
-    grid-row: 1/3;
+    grid-column: 1/5;
+    grid-row: 1/1;
   }
 
   .photo-2 {
-    grid-column: 3/5;
-    grid-row: 1/2;
+    grid-column: 1/9;
+    grid-row: 2/3;
   }
 
   .photo-3 {
-    grid-column: 5/7;
-    grid-row: 1/2;
+    grid-column: 1/9;
+    grid-row: 3/4;
   }
 
   .photo-4 {
-    grid-column: 3/5;
-    grid-row: 2/3;
+    grid-column: 1/9;
+    grid-row: 4/5;
   }
 
   .photo-5 {
-    grid-column: 5/7;
-    grid-row: 2/3;
+    grid-column: 1/9;
+    grid-row: 5/6;
   }
 
   .photo-6 {
-    grid-column: 1/3;
-    grid-row: 3/6;
+    grid-column: 5/9;
+    grid-row: 1/1;
   }
   .photo-7 {
-    grid-column: 3/5;
-    grid-row: 3/4;
+    grid-column: 1/9;
+    grid-row: 6/7;
   }
   .photo-8 {
-    grid-column: 5/7;
-    grid-row: 3/4;
+    grid-column: 1/9;
+    grid-row: 7/8;
   }
   .photo-9 {
-    grid-column: 3/5;
-    grid-row: 4/5;
+    grid-column: 1/5;
+    grid-row: 8/9;
   }
   .photo-10 {
-    grid-column: 5/7;
-    grid-row: 4/5;
+    grid-column: 5/9;
+    grid-row: 8/9;
   }
   .photo-11 {
-    grid-column: 1/6;
-    grid-row: 5/6;
+    grid-column: 1/5;
+    grid-row: 9/10;
   }
   .photo-12 {
-    grid-column: 6/10;
-    grid-row: 5/6;
+    grid-column: 5/9;
+    grid-row: 9/10;
   }
 
   .photo-13 {
-    grid-column: 1/3;
-    grid-row: 6/7;
+    grid-column: 1/5;
+    grid-row: 10/11;
   }
 
   .photo-14 {
-    grid-column: 3/5;
-    grid-row: 6/7;
+    grid-column: 5/9;
+    grid-row: 10/11;
   }
 
   .photo-15 {
-    grid-column: 5/7;
-    grid-row: 6/7;
+    grid-column: 1/5;
+    grid-row: 11/12;
   }
 
   .photo-16 {
-    grid-column: 1/7;
-    grid-row: 7/8;
+    grid-column: 5/9;
+    grid-row: 11/12;
   }
 
   .photo-17 {
-    grid-column: 1/4;
-    grid-row: 8/9;
+    grid-column: 1/5;
+    grid-row: 12/13;
   }
 
   .photo-18 {
-    grid-column: 4/7;
-    grid-row: 8/9;
+    grid-column: 5/9;
+    grid-row: 12/13;
   }
 
 }
@@ -129,6 +135,12 @@
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     .photo {
+      .display-sm-none{
+        display: block;
+      }
+      .display-desc-none{
+        display: none;
+      }
       .photo-description {
         .description {
           font-size: 12px;
