--- a/uncompiled_scss/styles/_slider.scss
+++ b/uncompiled_scss/styles/_slider.scss
@@ -13,7 +13,8 @@
       display: flex;
       flex-wrap: wrap;
       .left-side {
-        padding-top: 200px;
+        padding-right: 15%;
+        padding-top: 100px;
       }
 
       .right-side {
